feat: Ajouter un wrapper pour ré-appliquer le layout clavier avant l'exécution des jeux